Change port and login

--- a/web/src/test/resources/test.html
+++ b/web/src/test/resources/test.html
@@ -1,13 +1,23 @@
-<script
-        src="https://code.jquery.com/jquery-2.2.4.min.js"
-        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-        crossorigin="anonymous"></script>
-<div id="result">
+<html>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js'></script>
+<body ng-app='myApp' ng-controller='myCtrl as ctrl'>
+<span>Your token: {{ctrl.authToken}}</span><br/>
+<span>Your roles: {{ctrl.roles}}</span><br/>
+</body>
+<script type='text/javascript'>
+    var app = angular.module('myApp', []);
+    app.controller('myCtrl', function ($http) {
+        var self = this;
+        self.authToken = 'not ready';
+        self.roles = [];
 
-    salam
-</div>
-<script type="text/javascript">
-    $.post("http://localhost:8085/login", {username: "superuser", password: "superuser"}, function (data) {
-
+        $http.get('http://localhost:8092/services/rs/v1/experts/login', {
+            headers: {'Authorization': 'Basic ' + btoa('superuser:superuser')}
+        }).then(function (response) {
+            self.authToken = response.headers('x-auth-token');
+            self.roles = response.data;
+        });
     });
+
 </script>
+</html>
